Fix test.